fixed the error of the some of the 'more section' elements sticking out of their element areas

--- a/styles.css
+++ b/styles.css
@@ -413,6 +413,7 @@ body {
   color: gray;
   font-size: 13px;
   text-align: right;
+  max-width: 273px;
 }
 
 .date1,
